--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -11,29 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v3
+    - name: Set up Gradle
+      uses: gradle/actions/setup-gradle@v3 # v3 is stable and recommended
 
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x ./gradlew
+    - name: Build with Gradle
+      run: gradle :app:assembleRelease
 
-      - name: Build with Gradle
-        run: ./gradlew :app:assembleRelease
-
-      - name: Debug APK location
-        run: ls -R app/build/outputs/apk/release
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: cinemix-app-release
-          path: app/build/outputs/apk/release/**/*.apk
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: cinemix-app-release
+        # تم تعديل المسار هنا لاستخدام حرف البدل (*)
+        path: app/build/outputs/apk/release/*.apk
